style.css
:root {
    --c-blue:   #052096;
    --c-neon:   #DCFF48;
    --c-orange: #ED5E37;

    --f-normal:     titling-gothic-fb, sans-serif;
    --f-extended:   titling-gothic-fb-extended, sans-serif;
    --f-wide:       titling-gothic-fb-wide, sans-serif;
    --lh1:        1.45em;
    --lh2:        1.2em;

    --border:   3px solid var(--c-neon);

}

* {
    box-sizing: border-box;
}

html, body {
    color: var(--c-neon);
    background-color: var(--c-blue);
    margin: 0;
    font-family: var(--f-normal);
    font-size: 32px;
    line-height: var(--lh1);
    font-style: normal;
    font-weight: normal;
    text-align: center;
}




/* TEXT ----------------------------------------*/

p {
    margin-top: 25px;
    margin-bottom: 25px;
}

a {
    color: inherit;
    text-decoration: none;
}
a:hover,
a:active,
a:focus {
    color: var(--c-orange);
}

big {
    font-size: 1.4em;
    line-height: var(--lh1);
}

blockquote {
    font-size: 26px;
    line-height: var(--lh1);
}

figcaption {
    font-size: 19px;
    line-height: var(--lh1);
}

cite {
    font-family: var(--f-extended);
    font-weight: 500;
    font-style: normal;
    font-size: 16px;
    line-height: 2em;
    text-transform: uppercase;
}

address {
    font-style: normal;
    margin-top: -25px;
}

body > footer {
    font-size: 20px;
    line-height: var(--lh1);
    text-transform: uppercase;
    letter-spacing: 0.04em;
}

h1, h2, h3, h4, h5, h6, aside {
    font-family: var(--f-wide);
    font-weight: bold;
    line-height: var(--lh2);
    text-transform: uppercase;
    margin: 0;
}

h1 {
    /* surrounds logo; ignored */
}
h2 {
    font-size: 34px;
}
h2 big {
    font-size: 1.1em;
    line-height: var(--lh2);
    font-weight: 900;
}
h3 {
    font-size: 74px;
}
h4 {
    font-size: 28px;
    margin-top: 50px;
}
h5 {
    font-size: 20px;
    margin-top: 25px;
}
h6 {
    font-size: 24px;
}
aside {
    font-size: 18px;
    line-height: 145%;
}



/* STRUCTURE ----------------------------------------*/

header,
footer,
section {
    margin: 50px 0;
    padding: 0 50px;
}

ul, ol, li {
    list-style: none;
    margin: 0;
    padding: 0;
}

.bordered {
    border: var(--border);
}

.rotate-left-sm {
    transform: rotate(-7deg);
}
.rotate-right-sm {
    transform: rotate(7deg);
}
.rotate-left-md {
    transform: rotate(-12deg);
}
.rotate-right-md {
    transform: rotate(12deg);
}

.align-left {
    text-align: left;
}

.align-right {
    text-align: right;
}

.sr-only {
    display: block;
    position: absolute;
    left: -3000px;
    top: 0;
    pointer-events: none;
}

.grid {
    display: grid;
    align-items: center;
    justify-content: center;
    grid-template-columns: min-content auto;
}
.grid--has-gaps {
    grid-column-gap: 50px;
    grid-row-gap: 50px;
}

.constrain-sm,
.constrain-md {
    margin-left: auto;
    margin-right: auto;
}
.constrain-sm {
    width: 80%;
    max-width: 800px;
}
.constrain-md {
    width: 85%;
    max-width: 1000px;
}

.pull-up {
    margin-top: -25px;
}
.yank-up {
    margin-top: -100px;
}



/* ANIMATIONS ----------------------------------------*/

@keyframes marquee {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(-300%);
    }
}

.marquee {
    position: absolute;
    left: 0;
    width: 100%;
    display: grid;
    align-content: center;
    overflow: hidden;
    text-align: left;
    white-space: nowrap;
}
.marquee--fixed-top,
.marquee--fixed-bottom {
    position: fixed;
    z-index: 10;
    height: 50px;
    background: var(--c-blue);
}
.marquee--fixed-top {
    top: 0;
    border-bottom: var(--border);
}
.marquee--fixed-bottom {
    bottom: 0;
    border-top: var(--border);
}
.marquee__fixed-animation {
    position: absolute;
    animation: marquee 18s linear infinite;
    left: 100%;
    font-family: var(--f-extended);
    font-weight: 900;
    line-height: 50px;
    text-transform: none;
}
.marquee__fixed-animation--1 {
    animation-delay: 0;
}
.marquee__fixed-animation--2 {
    animation-delay: 6s;
}
.marquee__fixed-animation--3 {
    animation-delay: 12s;
}

.marquee--ribbon {
    border: var(--border);
    height: 75px;
    width: 150%;
    left: -25%;
}
.marquee--ribbon--neon {
    z-index: 1;
    transform: rotate(1.5deg);
    color: var(--c-blue);
    background: var(--c-neon);
}
.marquee--ribbon--blue {
    z-index: 2;
    transform: rotate(-9deg);
    color: var(--c-orange);
    background: var(--c-blue);
}
.marquee__ribbon-animation {
    position: absolute;
    animation: marquee 30s linear infinite;
    left: 100%;
    line-height: 75px;
}
.marquee__ribbon-animation--1 {
    animation-delay: 0;
}
.marquee__ribbon-animation--2 {
    animation-delay: 10s;
}
.marquee__ribbon-animation--3 {
    animation-delay: 20s;
}

.marquee--quips-title {
    z-index: 1;
    line-height: 0.8em;
    height: 1em;
}
.marquee__quips-animation {
    position: absolute;
    animation: marquee 24s linear infinite;
    left: 100%;
}
.marquee__quips-animation--1 {
    animation-delay: 0;
}
.marquee__quips-animation--2 {
    animation-delay: 8s;
}
.marquee__quips-animation--3 {
    animation-delay: 16s;
}


@keyframes wow {
    0% {
        transform: scale(1) rotate(-7deg);
    }
    50% {
        transform: scale(1.25) rotate(7deg);
    }
    100% {
        transform: scale(1) rotate(-7deg);
    }
}


.animate-wow {
    animation: wow 1.5s linear infinite;
}


@keyframes teeter {
    0% {
        transform: rotate(-7deg);
    }
    50% {
        transform: rotate(7deg);
    }
    100% {
        transform:  rotate(-7deg);
    }
}

@keyframes teeter-left {
    0% {
        transform: rotate(-7deg);
    }
    50% {
        transform: rotate(-10deg);
    }
    100% {
        transform:  rotate(-7deg);
    }
}

@keyframes teeter-right {
    0% {
        transform: rotate(7deg);
    }
    50% {
        transform: rotate(10deg);
    }
    100% {
        transform:  rotate(7deg);
    }
}

.animate-teeter {
    animation: teeter 2s ease-in-out infinite;
}
.animate-teeter--1 {
    animation-delay: 0;
}
.animate-teeter--2 {
    animation-delay: 1s;
}
.animate-teeter-left {
    animation: teeter-left 0.75s linear infinite;
}
.animate-teeter-right {
    animation: teeter-right 0.75s linear infinite;
}




/* IMAGE SIZING ----------------------------------------*/

img {
    height: auto;
    display: block;
}
.icon {
    display: inline-block;
    height: var(--lh1);
    vertical-align: text-bottom;
}
.img-logo {
    width: 437px;
}
.img-POP-icon {
    width: 216px;
}
.img-arrow {
    width: 113px;
}
.img-tim {
    width: 592px;
}
.img-doggy-on-bed {
    width: 876px;
}
.img-earth {
    width: 129px;
}
.img-bag-clean,
.img-bag-trash {
    width: 568px;
}
.img-cathead {
    width: 185px;
}
.img-doghead {
    width: 268px;
}
.img-insta {
    width: 540px;
}



/* CONTENT ----------------------------------------*/

.hero-section {
    padding-top: 100px;
}
.hero__grid {
    align-items: flex-start;
}

.burst {
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    text-align: center;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    pointer-events: none;
}
.burst--orange {
    background-image: url('img/burst-orange.png');
    width: 232px;
    height: 181px;
}
.burst--outline {
    background-image: url('img/burst-outline.png');
    width: 231px;
    height: 182px;
    color: var(--c-orange);
}
.burst--neon {
    background-image: url('img/burst-neon.png');
    width: 239px;
    height: 173px;
    color: var(--c-orange);
    font-size: 1.125em;
}
.burst__words {
    display: inline-block;
    margin: 0 30px;
}

.arrow {
    text-align: left;
}
.arrow__img {
    display: block;
}
.arrow__text {
    color: var(--c-orange);
    margin-top: 25px;
    text-align: center;
    display: inline-block;
}

.tim__grid {
    margin-top: 100px;
}
.tim__figure {
    border: var(--border);
    background: var(--c-neon);
}
.tim__caption {
    text-align: left;
    margin: 5px 10px 10px;
    color: var(--c-blue);
}
.tim__quote {
    background: transparent no-repeat center/contain url('img/speach-bubble.png');
    width: 498px;
    height: 366px;
    position: relative;
    left: -125px;
    display: grid;
    align-content: center;
    padding: 50px;
}

.ribbon-section {
    margin: 150px 0 200px;
    height: 50px;
}

.doggy {
    display: inline-block;
    margin: 0 auto;
    position: relative;
}
.doggy__happy-earth,
.doggy__burst1,
.doggy__burst2 {
    position: absolute;
}
.doggy__happy-earth {
    right: 0;
    top: 0;
    height: auto;
}
.doggy__burst1 {
    left: 5%;
    top: 15%;
}
.doggy__burst2 {
    right: 10%;
    bottom: 15%;
}

.quips-section {
    margin-top: 150px;
    margin-bottom: 150px;
    background: var(--c-neon);
    color: var(--c-blue);
}
.quips__grid {
    grid-template-columns: 33.333% 33.333% 33.333%;
}
.quips__group {
    margin-top: 50px;
}
.quips__quote {
    margin-bottom: 5px;
}
.quips__cite {
    display: block;
    margin-bottom: 50px;
}

.bags__grid {
    padding: 25px 0;
}

.animalhead__grid {
    grid-template-columns: auto auto auto auto;
    padding-bottom: 50px
}
.animalhead__sound {
    display: block;
    margin: 25px 0;
    color: var(--c-orange);
}

.shame {
    padding-top: 25px;
}
.shame__grid {
    grid-template-columns: 50% 50%;
    grid-template-rows: auto;
    grid-template-areas:
        "title-dl      title-copy"
        "insta-graphic insta-text";
    align-items: stretch;
    margin-bottom: 25px;
}
.shame__title-dl {
    grid-area: title-dl;
}
.shame__title-copy {
    grid-area: title-copy;
}
.shame__insta-graphic,
.shame__insta-text {
    margin: -25px 0 0;
}
.shame__insta-graphic {
    grid-area: insta-graphic;
}
.shame__insta-text {
    grid-area: insta-text;
    padding: 25px;
    background: var(--c-neon);
    color: var(--c-orange);
}

.donate {
    position: relative;
    margin: 0 auto 75px;
    padding: 50px 0;
}
.donate__burst1,
.donate__burst2 {
    position: absolute;
    padding: 0 25px;
}
.donate__burst1 {
    position: absolute;
    top: 10%;
    left: 5%;
}
.donate__burst2 {
    position: absolute;
    right: 5%;
    bottom: 5%;
}

.footer__grid {
    grid-template-columns: auto max-content auto;
    align-items: flex-end;
    justify-content: stretch;
    margin-top: 125px;
}
.footer__img {
    display: block;
    margin-bottom: 25px;
}

